--- a/index.html
+++ b/index.html
@@ -11,39 +11,50 @@
 
 <body style="text-align: center">
   <div class="noprint">
-    <br>
-    <label for="habit_name">Habit Name</label>
-    <br>
-    <input type="text" id="habit_name" name="habit_name" size="45" value="Habit Name" />
-    <br>
-    <br>
-    <label for="habit_description">Habit Description (Optional)</label>
-    <br>
-    <textarea id="habit_description" name="habit_description" rows="4" cols="45"></textarea>
-    <br>
-    <br>
-    <label for="num_cells">Number of Cells</label>
-    <br>
-    <input type="number" id="num_cells" name="num_cells" min="2" max="5000" value="14" step="1"/>
-    <br>
-    <br>
-    <label for="cell_size">Cell Size</label>
-    <br>
-    <input type="number" id="cell_size" name="cell_size" min="2" max="1000" value="75" step="1"/>
-    <br>
-    <br>
-    <label for="line_thickness">Line Thickness</label>
-    <br>
-    <input type="number" id="line_thickness" name="line_thickness" min="1" max="100" value="10" step="0.1"/>
-    <br>
-    <br>
-    <button class="generate_button" type="button" onclick="Generate();">
-      Generate
-    </button>
-    <button id="print_button" style="display:none; margin-left: 10px;" class="print_button" type="button" onclick="window.print();">
-      Print
-    </button>
-    <br>
+    <table class="main_table">
+      <tr>
+        <td class="right_align">Habit Name: </td>
+        <td class="left_align"><input type="text" id="habit_name" name="habit_name" size="45" value="Habit Name" /></td>
+      </tr>
+      <tr>
+        <td>Habit&nbsp;<br>Description: </td>
+        <td class="left_align"><textarea id="habit_description" name="habit_description" rows="5" cols="42"></textarea></td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <table>
+            <tr>
+              <td class="right_align">Number of Cells: </td>
+              <td class="left_align">
+                <input style="width:75px;" type="number" id="num_cells" name="num_cells" min="2" max="5000" value="14" step="1"/>
+              </td>
+            </tr>
+            <tr>
+              <td class="right_align">Cell Size: </td>
+              <td class="left_align">
+                <input style="width:75px;" type="number" id="cell_size" name="cell_size" min="2" max="1000" value="80" step="1"/>
+              </td>
+            </tr>
+            <tr>
+              <td class="right_align">Line Thickness: </td>
+              <td class="left_align">
+                <input style="width:75px;" type="number" id="line_thickness" name="line_thickness" min="1" max="100" value="10" step="0.1"/>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <button class="generate_button" type="button" onclick="Generate();">
+            Generate
+          </button>
+          <button id="print_button" style="display:none; margin-left: 10px;" class="print_button" type="button" onclick="window.print();">
+            Print
+          </button>
+        </td>
+      </tr>
+    </table>
   </div>
   <div>
     <p id="display_title" style="width:850px; display: inline-block; font-size: 80px; line-height:80px; margin:0px;"></p>
