allow clicking to fill in cells without printing

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     </table>
   </div>
   <div>
+    <br class="noprint">
     <p id="display_title" style=""></p>
+    <br>
     <p id="display_description" style=""></p>
     <br>
     <br>
